Bug 161994 - Deleting a single Impress comment does not work
Summary: Deleting a single Impress comment does not work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-07-11 07:57 UTC by Buovjaga
Modified: 2024-10-08 14:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-07-11 07:57:33 UTC
1. Open attachment 193886 [details]
2. Click a comment indicator
3. Click the dropdown button in the bottom right and select Delete comment

Before commit e17c56bfc7930d3c14c3ff4cfd59828e8dcc0229 this worked.

All Linux UI backends and Windows.
Comment 1 Julien Nabet 2024-07-11 08:10:32 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Julien Nabet 2024-07-11 08:50:38 UTC
asynchron dialogs are more difficult to debug since you can't compare bt between ok case and ko case to find the location which makes it fail => uncc myself.
Comment 3 Commit Notification 2024-07-14 03:21:29 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aff09d7cb464af3223ee43cac0483ae3bf22fddd

tdf#161994 annot: trigger selection of the current annotation

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2024-07-17 07:10:57 UTC
Verified fix.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 450739e92e6f90060e5fdfa42ae291b1abaebd7a
CPU threads: 8; OS: Linux 6.9; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded