tdf#161994 annot: trigger selection of the current annotation

Delete annotation isn't active if no annotation is selected, but
we do not report a new selection anymore, so fix this.

Change-Id: Idb455d0c0d42412c55de4a7ca037342b58da548b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170429
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit aff09d7cb464af3223ee43cac0483ae3bf22fddd)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170831
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>