sd/source/ui/annotations/annotationmanager.cxx
@@ -1298,6 +1298,11 @@ void AnnotationManager::GetAnnotationState(SfxItemSet& rItemSet)
     mxImpl->GetAnnotationState(rItemSet);
 }
 
+void AnnotationManager::SelectAnnotation(rtl::Reference<sdr::annotation::Annotation> const& xAnnotation)
+{
+    mxImpl->SelectAnnotation(xAnnotation);
 }
+
+} // end sd
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
